Gallery Page | Gallery Images | Home Images | Bug Fixes

--- a/donate.html
+++ b/donate.html
@@ -149,7 +149,7 @@
 
                                     <li><a href="library/"><img width="20px" height="30px"
                                                 src="assets/images/course/icon4.png"> E - library</a></li>
-                                                                                    <li><a href="lyrics/"><img width="30px" height="30px"
+                                                                                    <li><a href="lyrics/home.html"><img width="30px" height="30px"
                                                 src="assets/images/course/icon9.png"> Nauha Lyrics</a></li>
 
 <li><a href="gallery.html"><img width="20px" height="30px"
@@ -328,7 +328,7 @@
                                     </div>
                                     <ul>
                                         <li><a href="library/">E Library</a></li>
-                                        <li><a href="lyrics/">Nauha Lyrics</a></li>
+                                        <li><a href="lyrics/home.html">Nauha Lyrics</a></li>
                                         <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li><a href="about.html">About Us</a></li>
