--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                                     <li><a href="library/"><img width="20px" height="30px"
                                                 src="assets/images/course/icon4.png"> E - library</a></li>
-                                                                                    <li><a href="lyrics/"><img width="30px" height="30px"
+                                                                                    <li><a href="lyrics/home.html"><img width="30px" height="30px"
                                                 src="assets/images/course/icon9.png"> Nauha Lyrics</a></li>
 
 <li><a href="gallery.html"><img width="20px" height="30px"
@@ -269,7 +269,7 @@
             <div class="hero-slider">
                 <div class="slide">
                     <div class="container">
-                        <img src="assets/images/slider/slide-1.jpg" alt class="slider-bg">
+                        <img src="assets/images/g_images/g_6.jpg" alt class="slider-bg">
                         <div class="row">
                             <div class="col col-md-8 col-md-offset-2 slide-caption">
                                 <div class="slide-top">
@@ -287,7 +287,7 @@
                 </div>
                 <div class="slide">
                     <div class="container">
-                        <img src="assets/images/slider/slide-2.jpg" alt class="slider-bg">
+                        <img src="assets/images/g_images/g_21.jpg" alt class="slider-bg">
                         <div class="row">
                             <div class="col col-md-8 col-md-offset-2 slide-caption">
                                 <div class="slide-top">
@@ -305,7 +305,7 @@
                 </div>
                 <div class="slide">
                     <div class="container">
-                        <img src="assets/images/slider/slide-3.jpg" alt class="slider-bg">
+                        <img src="assets/images/g_images/g_26.jpg" alt class="slider-bg">
                         <div class="row">
                             <div class="col col-md-8 col-md-offset-2 slide-caption">
                                 <div class="slide-top">
@@ -331,7 +331,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="wpo-about-img-3">
-                                <img src="assets/images/about.png" alt="">
+                                <img src="assets/images/g_images/g_21.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -420,7 +420,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 custom-grid col-12">
                             <div class="service-single-item">
                                 <div class="service-single-img">
-                                    <img src="assets/images/service/img-3.png" alt="">
+                                    <img src="assets/images/g_images/g_24.jpg" alt="">
                                 </div>
                                 <div class="service-text">
                                     <h2><a href="gallery.html">Muharram</a></h2>
@@ -430,7 +430,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 custom-grid col-12">
                             <div class="service-single-item">
                                 <div class="service-single-img">
-                                    <img src="assets/images/service/img-4.png" alt="">
+                                    <img src="assets/images/g_images/g_21.jpg" alt="">
                                 </div>
                                 <div class="service-text">
                                     <h2><a href="gallery.html">Ayyam E Fatimiyah</a></h2>
@@ -440,7 +440,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 custom-grid col-12">
                             <div class="service-single-item">
                                 <div class="service-single-img">
-                                    <img src="assets/images/service/img-5.png" alt="">
+                                    <img src="assets/images/g_images/g_22.jpg" alt="">
                                 </div>
                                 <div class="service-text">
                                     <h2><a href="gallery.html">Juloos</a></h2>
@@ -450,7 +450,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 custom-grid col-12">
                             <div class="service-single-item">
                                 <div class="service-single-img">
-                                    <img src="assets/images/service/img-6.png" alt="">
+                                    <img src="assets/images/g_images/g_6.jpg" alt="">
                                 </div>
                                 <div class="service-text">
                                     <h2><a href="gallery.html">Majalis</a></h2>
@@ -460,7 +460,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 custom-grid col-12">
                             <div class="service-single-item">
                                 <div class="service-single-img">
-                                    <img src="assets/images/service/img-7.png" alt="">
+                                    <img src="assets/images/g_images/g_16.jpg" alt="">
                                 </div>
                                 <div class="service-text">
                                     <h2><a href="gallery.html">Dua</a></h2>
@@ -470,7 +470,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-6 custom-grid col-12">
                             <div class="service-single-item">
                                 <div class="service-single-img">
-                                    <img src="assets/images/service/img-8.png" alt="">
+                                    <img src="assets/images/g_images/g_21.jpg" alt="">
                                 </div>
                                 <div class="service-text">
                                     <h2><a href="gallery.html">Shahadat Imam Ali(as)</a></h2>
@@ -700,7 +700,7 @@
                                     </div>
                                     <ul>
                                         <li><a href="library/">E Library</a></li>
-                                        <li><a href="lyrics/">Nauha Lyrics</a></li>
+                                        <li><a href="lyrics/home.html">Nauha Lyrics</a></li>
                                         <li><a href="gallery.html">Gallery</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li><a href="about.html">About Us</a></li>
