Videos Added | API Fix | Bug Fix

--- a/contact.html
+++ b/contact.html
@@ -267,7 +267,7 @@
                             <div class="col col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="contact-form">
                                     <h2>Get In Touch</h2>
-                                    <form class="contact-validation-active">
+                                    <form action="https://formspree.io/xoqnqbyg" method="POST" class="contact-validation-active">
                                         <div>
                                             <input type="text" class="form-control" name="name" placeholder="Name">
                                         </div>
@@ -314,8 +314,8 @@
                                 </div>
                                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                                     <div class="info-item">
-                                        <a href="mailto:shiachannel59@gmail.com">
-                                            <h2>madarsaehusainiya@gmail.com</h2>
+                                        <a href="mailto:zuhairabs@gmail.com">
+                                            <h2>zuhairabs@gmail.com</h2>
                                         </a>
                                         <div class="info-wrap">
                                             <div class="info-icon-2">
@@ -329,7 +329,7 @@
                                 </div>
                                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                                     <div class="info-item">
-                                        <a href="tel:+919699992912">
+                                        <a href="tel:+919022122553">
                                             <h2>+91 902-212-2553</h2>
                                         </a>
                                         <div class="info-wrap">
@@ -406,7 +406,7 @@
                                         <ul>
                                             <li><i class="fi ti-location-pin"></i>Golibar Rd, Santacruz East, Mumbai - 400055</li>
                                             <li><i class="fi flaticon-call"></i>+91 9022122553</li>
-                                            <li><i class="fi flaticon-envelope"></i>madarsaehusainiya@gmail.com</li>
+                                            <li><i class="fi flaticon-envelope"></i>zuhairabs@gmail.com</li>
                                         </ul>
                                     </div>
                                 </div>
