--- a/donate.html
+++ b/donate.html
@@ -358,7 +358,7 @@
                                         <ul>
                                             <li><i class="fi ti-location-pin"></i>Golibar Rd, Santacruz East, Mumbai - 400055</li>
                                             <li><i class="fi flaticon-call"></i>+91 9022122553</li>
-                                            <li><i class="fi flaticon-envelope"></i>madarsaehusainiya@gmail.com</li>
+                                            <li><i class="fi flaticon-envelope"></i>zuhairabs@gmail.com</li>
                                         </ul>
                                     </div>
                                 </div>
