--- a/gallery.html
+++ b/gallery.html
@@ -266,7 +266,7 @@
           <div class="col-12">
             <div class="wpo-section-title">
               <span>Khar Shia Community</span>
-              <h2>Gallery</h2>
+              <h2>Matami Sangat Asghar e Masoom (as)</h2>
             </div>
           </div>
         </div>
@@ -516,7 +516,7 @@
                     <ul>
                       <li><i class="fi ti-location-pin"></i>Golibar Rd, Santacruz East, Mumbai - 400055</li>
                       <li><i class="fi flaticon-call"></i>+91 9022122553</li>
-                      <li><i class="fi flaticon-envelope"></i>madarsaehusainiya@gmail.com</li>
+                      <li><i class="fi flaticon-envelope"></i>zuhairabs@gmail.com</li>
                     </ul>
                   </div>
                 </div>
