--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="contact-intro">
                                 <ul>
                                     <li><i class="fi ti-location-pin"></i>Golibar Rd, Santacruz East, Mumbai - 400055</li>
-                                    <li><i class="fi flaticon-envelope"></i> madarsaehusainiya@gmail.com</li>
+                                    <li><i class="fi flaticon-envelope"></i> zuhairabs@gmail.com</li>
                                 </ul>
                             </div>
                         </div>
@@ -730,7 +730,7 @@
                                         <ul>
                                             <li><i class="fi ti-location-pin"></i>Golibar Rd, Santacruz East, Mumbai - 400055</li>
                                             <li><i class="fi flaticon-call"></i>+91 9022122553</li>
-                                            <li><i class="fi flaticon-envelope"></i>madarsaehusainiya@gmail.com</li>
+                                            <li><i class="fi flaticon-envelope"></i>zuhairabs@gmail.com</li>
                                         </ul>
                                     </div>
                                 </div>
