--- a/contact.html
+++ b/contact.html
@@ -8,27 +8,39 @@
       <meta name="author" content="Madarsa E Husainiya">
         <title>Madarsa E Husainiya | Contact - Khar Shia Masjid</title>
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://zuhairabs.github.io/madarsa-e-husainiya" />
+    <link rel="canonical" href="https://madarsaehusainiya.com" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Madarsa E Husainiya | Contact - Khar Shia Masjid" />
     <meta property="og:description" content="Madarsa E Husainiya - Khar Shia Masjid" />
-    <meta property="og:url" content="https://zuhairabs.github.io/madarsa-e-husainiya" />
+    <meta property="og:url" content="https://madarsaehusainiya.com" />
     <meta property="og:site_name" content="madarsa-e-husainiya" />
-    <meta property="og:image" content="https://zuhairabs.github.io/madarsa-e-husainiya/assets/images/logo-3.jpg" />
+    <meta property="og:image" content="https://madarsaehusainiya/assets/images/logo-3.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <script type='application/ld+json'>
-        {
-          "@context": "http://www.schema.org",
-          "@type": "Store",
-          "name": "Madarsa E Husainiya",
-          "url": "https://zuhairabs.github.io/madarsa-e-husainiya",
-          "logo": "https://zuhairabs.github.io/madarsa-e-husainiya/assets/images/logo-3.jpg",
-          "image": "https://zuhairabs.github.io/madarsa-e-husainiya/assets/images/logo-3.jpg",
-          "description": "Khar Shia Masjid",
-          "openingHours": "Mo, Tu, We, Th, Fr, Sa, Su -"
-        }
-      </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Madarsa E Husainiya - Khar Shia Mosque",
+  "alternateName": "Khar Shia Isnna Ashari Mosque",
+  "url": "https://madarsaehusainiya.com",
+  "logo": "https://madarsaehusainiya.com/assets/images/logo-3.jpg",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "9022122553",
+    "contactType": "customer service",
+    "areaServed": ["IN","IR","IQ","150","142","YE","TR","SE","SA","RU","PK","OM","NO","LB","DE","GH","EG","BD","BH","AZ","AF","US","GB","CA"],
+    "availableLanguage": ["Arabic","Azerbaijani","Persian","Hindi","Urdu"]
+  },
+  "sameAs": [
+    "https://www.facebook.com/madarsa-e-husainiya/",
+    "https://twitter.com/madarsa-e-husainiya?lang=en",
+    "https://www.instagram.com/madarsa-e-husainiya/",
+    "https://www.youtube.com/channel/madarsaehusainiya",
+    "https://madarsaehusainiya.com"
+  ]
+}
+</script>
       
           <!-- Meta Data -->
     <link rel="shortcut icon" href="assets/images/icons/favicon.ico" />
