--- a/404.html
+++ b/404.html
@@ -14,22 +14,34 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Shiachannel | 404 - Spreading the Message of Velayat" />
     <meta property="og:description" content="Madarsa e Husainiya | 404 - Khar Shia Mosque" />
-    <meta property="og:url" content="https://zuhairabs.github.io/madarsa-e-husainiya" />
+    <meta property="og:url" content="https://madarsaehusainiya.com" />
     <meta property="og:site_name" content="madarsa-e-husainiya" />
-    <meta property="og:image" content="https://zuhairabs.github.io/shiachannel/assets/images/logo-3.jpg" />
+    <meta property="og:image" content="https://madarsaehusainiya.com/assets/images/logo-3.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <script type='application/ld+json'>
-        {
-          "@context": "http://www.schema.org",
-          "@type": "Store",
-          "name": "Shia Channel",
-          "url": "https://zuhairabs.github.io/shiachannel",
-          "logo": "https://zuhairabs.github.io/shiachannel/assets/images/logo-3.jpg",
-          "image": "https://zuhairabs.github.io/madarsa-e-husainiya/assets/images/slider/imam-reza-shrine.png",
-          "description": "Spreading the Message of Velayat",
-          "openingHours": "Mo, Tu, We, Th, Fr, Sa, Su -"
-        }
-      </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Madarsa E Husainiya - Khar Shia Mosque",
+  "alternateName": "Khar Shia Isnna Ashari Mosque",
+  "url": "https://madarsaehusainiya.com",
+  "logo": "https://madarsaehusainiya.com/assets/images/logo-3.jpg",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "9022122553",
+    "contactType": "customer service",
+    "areaServed": ["IN","IR","IQ","150","142","YE","TR","SE","SA","RU","PK","OM","NO","LB","DE","GH","EG","BD","BH","AZ","AF","US","GB","CA"],
+    "availableLanguage": ["Arabic","Azerbaijani","Persian","Hindi","Urdu"]
+  },
+  "sameAs": [
+    "https://www.facebook.com/madarsa-e-husainiya/",
+    "https://twitter.com/madarsa-e-husainiya?lang=en",
+    "https://www.instagram.com/madarsa-e-husainiya/",
+    "https://www.youtube.com/channel/madarsaehusainiya",
+    "https://madarsaehusainiya.com"
+  ]
+}
+</script>
 
     <!-- Meta Data -->
     <link rel="shortcut icon" href="assets/images/icons/favicon.ico" />
