--- a/videos.html
+++ b/videos.html
@@ -41,6 +41,15 @@
   ]
 }
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HNTTRQPPWN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HNTTRQPPWN');
+</script>
 
   <!-- Meta Data -->
   <link rel="shortcut icon" href="assets/images/icons/favicon.ico" />
