--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,16 @@
 }
 </script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HNTTRQPPWN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HNTTRQPPWN');
+</script>
+
   <!-- Meta Data -->
   <link rel="shortcut icon" href="assets/images/icons/favicon.ico" />
   <link rel="apple-touch-icon" sizes="57x57" href="assets/images/icons/apple-icon-57x57.png">
