--- a/lyrics/home.html
+++ b/lyrics/home.html
@@ -16,6 +16,41 @@
 <link rel="stylesheet" href="resources/css/tabulous.css" />
 <!-- JS dependencies (order matters!) -->
 <!-- <script src="cordova.js"></script> -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Madarsa E Husainiya - Khar Shia Mosque",
+  "alternateName": "Khar Shia Isnna Ashari Mosque",
+  "url": "https://madarsaehusainiya.com",
+  "logo": "https://madarsaehusainiya.com/assets/images/logo.png",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "9022122553",
+    "contactType": "customer service",
+    "areaServed": ["IN","IR","IQ","150","142","YE","TR","SE","SA","RU","PK","OM","NO","LB","DE","GH","EG","BD","BH","AZ","AF","US","GB","CA"],
+    "availableLanguage": ["Arabic","Azerbaijani","Persian","Hindi","Urdu"]
+  },
+  "sameAs": [
+    "https://www.facebook.com/madarsa-e-husainiya/",
+    "https://twitter.com/madarsa-e-husainiya?lang=en",
+    "https://www.instagram.com/madarsa-e-husainiya/",
+    "https://www.youtube.com/channel/madarsaehusainiya",
+    "https://madarsaehusainiya.com"
+  ]
+}
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HNTTRQPPWN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HNTTRQPPWN');
+</script>
 </head>
 
 <body>
